<?xml version="1.0"?>
<package>
  <name>wam_joystick</name>
  <version>0.0.1</version>
  <description>The wam_joystick package </description>
  <maintainer email="egambaro@robotnik.es">Elena Gambaro</maintainer>

  <license>GPL</license>

  <author>Elena Gambaro</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>tf</run_depend>

</package>
